Update tutorial.html to zh_cn

--- a/config/heracles/tutorial.html
+++ b/config/heracles/tutorial.html
@@ -1,8 +1,8 @@
-<h2>Welcome to DarkRPG!</h2>
-<p>This section will serve as a mini starter guide for the modpack as well as giving you important information on creating your own server and visiting the Discord channel.</p>
+<h2>欢迎来到 DarkRPG！</h2>
+<p>这部分内容是本整合包的一个迷你入门指南，同时也会告诉你关于如何创建服务器以及访问Discord频道的重要信息。</p>
 <hr/>
 <hint color="gray" icon="heracles:quest_book" title="Note:">
-    <p>Read the introduction and other tasks in the list to learn how some of the mods work in the pack. Complete the repeatable bounties and gain rewards.</p>
+    <p>通过阅读本说明和列表内的其他任务，来学习如何去玩整合包内的这些模组吧。通过完成可重复的赏金任务来获得奖励。</p>
 </hint>
 <hr/>
-<p>Are you prepared?..</p>
+<p>你准备好了吗？…</p>
